tests/good/56/test.scm
(let ((a (lambda (x) (define x 100) x))) (a 5))