tests/bad/13/test.scm
(letrec* ((a (lambda (x) x))) (a))